First widget spacing issue

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -20,7 +20,9 @@
 
 
     .zone-content {
+        display: inline-block;
         padding: 0;
+        width: 100%;
     }
     
     
